appId: ${APP_ID}
---
- launchApp:
    appId: ${APP_ID}
- runFlow: utils/sign-in.yaml
- runFlow:
    file: 'utils/select-tab.yaml'
    env:
      title: 'Meira'

- tapOn:
    id: 'MORE_CARD_AIR_DISCOUNT'
- assertVisible:
    id: 'SCREEN_AIR_DISCOUNT'
- assertVisible:
    id: 'AIR_DISCOUNT_ITEM'
