appId: ${APP_ID}
---
- launchApp:
    appId: ${APP_ID}
    clearState: true
- runFlow: utils/sign-in.yaml
- runFlow:
    file: 'utils/select-tab.yaml'
    env:
      title: 'Meira'

- tapOn:
    id: 'MORE_CARD_APPLICATIONS'
- assertVisible: 'Ókláraðar umsóknir.*'
- tapOn:
    text: '.*Sjá allt.*'
- assertVisible:
    id: 'SCREEN_APPLICATIONS_DETAILS'
- assertVisible:
    id: 'APPLICATION_ITEM'
- tapOn:
    text: 'Opna umsókn'
- assertVisible:
    id: 'SCREEN_PASSKEY'
- tapOn:
    id: 'NAVBAR_SHEET_CLOSE_BUTTON'
- runFlow: 'utils/back.yaml'
