appId: ${APP_ID}
---
- launchApp:
    appId: ${APP_ID}
- runFlow: utils/sign-in.yaml
- runFlow:
    file: 'utils/select-tab.yaml'
    env:
      title: 'Pósthólf'

- assertVisible:
    id: 'INBOX_ITEM_INBOX_TESTING_0'
- tapOn:
    text: 'Velja skjöl'
- tapOn:
    id: 'INBOX_ITEM_INBOX_TESTING_0'
- tapOn:
    text: '.*Geymsla.*'
- assertNotVisible:
    id: 'INBOX_ITEM_INBOX_TESTING_0'
