appId: 'is.island.app.dev'
---
- tapOn:
    text: 'Mock'
    optional: true
- runFlow:
    when:
      notVisible:
        text: 'Mock'
    commands:
      - tapOn:
          text: '(Switch)'
      - tapOn:
          text: 'Mock'
- tapOn:
    id: 'LOGIN_BUTTON_AUTHENTICATE'
