appId: 'is.island.app.dev'
---
# Launch the app
- launchApp:
    appId: 'is.island.app.dev'

# Handle sign-in if needed
- runFlow:
    when:
      visible:
        id: 'LOGIN_BUTTON_AUTHENTICATE'
        optional: true
    commands:
      # Switch to Mock environment if not already selected
      - runFlow:
          when:
            notVisible:
              text: 'Mock'
          commands:
            - tapOn:
                text: '(Switch)'
            - tapOn:
                text: 'Mock'
            # Close modal on Android
            - tapOn:
                text: 'OK'
                optional: true
      # Tap the login button
      - tapOn:
          id: 'LOGIN_BUTTON_AUTHENTICATE'

# TODO: The tab bar does not consistently apply test IDs. Our home button especially does not register with
# any text (using accessibilityLabel) or testID. Also, the testIDs on other buttons are removed after they get focused.assertVisible:
# Maybe a react-native-navigation issue? In the meantime we avoid tapping the home tab, use text for other tabs and trust
# that each test starts on the home screen.
#- assertVisible:
#  id: 'TABBAR_TAB_HOME'
