appId: ${APP_ID}
---
- launchApp:
    appId: ${APP_ID}
- runFlow: utils/sign-in.yaml
- runFlow:
    file: 'utils/select-tab.yaml'
    env:
      title: 'Skírteini'

- assertVisible:
    text: 'Ökuskírteini.*'
- tapOn:
    text: 'Ökuskírteini.*'
- assertVisible:
    id: 'LICENSE_STATUS'
- assertVisible:
    id: 'LICENSE_FIELDS'
- tapOn:
    text: 'Skírteini'
